<resources>
    <string name="app_name">Ndoro Kojo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="producer">Produced by\nDPKH Kabupaten Brebes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="divider">:</string>
    <string name="belum_memiliki_akun">Belum memiliki Akun?</string>
    <string name="phone_number">No. Hp</string>
    <string name="alamat">Alamat</string>
    <string name="desa_kelurahan">Desa / Kelurahan</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="provinsi">Provinsi</string>
    <string name="simpan">Simpan</string>
    <string name="welcome">Welcome</string>
    <string name="livestock_application">Livestock Application</string>
    <string name="retry">Retry</string>
    <string name="event">Event</string>
    <string name="domba">Domba</string>
    <string name="sapi_potong">Sapi Potong</string>
    <string name="kambing">Kambing</string>
    <string name="sapi_perah">Sapi Perah</string>
    <string name="kerbau">Kerbau</string>
    <string name="kelinci">Kelinci</string>
    <string name="itik">Itik</string>
    <string name="ayam_petelur">Ayam Petelur</string>
    <string name="enthok">Enthok</string>
    <string name="ayam_potong">Ayam Potong</string>
    <string name="ayam_kampung">Ayam Kampung</string>
    <string name="babi">Babi</string>
    <string name="puyuh">Puyuh</string>
    <string name="merpati">Merpati</string>
    <string name="brebes_today">Brebes Today</string>
    <string name="digital_finance">Digital Finance</string>
    <string name="lebih_banyak">Lebih Banyak</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="birth">Birth</string>
    <string name="died">Died</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Ganti Password</string>
    <string name="insert_your_old_password">Masukkan Password Lama</string>
    <string name="old_password">Password Lama</string>
    <string name="insert_new_password">Masukkan Password Baru</string>
    <string name="new_password">Password Baru</string>
    <string name="new_password_confirmation">Konfirmasi Password Baru</string>
    <string name="tambah_kandang">Tambah Kandang</string>
    <string name="kelompok_ternak">Kelompok Ternak</string>
    <string name="umur">Umur</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="error_connecting_to_the_server">Gagal koneksi ke server!</string>
    <string name="muat_ulang">Muat Ulang</string>

    <string name="occupation_peternak">PETERNAK</string>
    <string name="occupation_pedagang_peternak">PEDAGANG TERNAK</string>

    <string name="sensor_status_connected">TERPASANG</string>
    <string name="sensor_status_not_connected">TIDAK TERPASANG</string>

    <string name="ternak_umur_anak">ANAK</string>
    <string name="ternak_umur_muda">MUDA</string>
    <string name="ternak_umur_dewasa">DEWASA</string>
    <string name="ternak_umur_bibit_induk">BIBIT INDUK</string>
    <string name="ternak_umur_bibit_pejantan">BIBIT PEJANTAN</string>

    <string name="jenis_kandang_medium">KANDANG MEDIUM</string>
    <string name="jenis_kandang_besar">KANDANG BESAR</string>

    <string name="gender_laki_laki">LAKI-LAKI</string>
    <string name="gender_perempuan">PEREMPUAN</string>
    <string name="see_more">Lebih Banyak</string>
    <string name="see_less">Lebih Sedikit</string>
    <string name="peternak">Peternak</string>
    <string name="kandang">Kandang</string>
    <string name="ternak">Ternak</string>
    <string name="status">Status</string>
    <string name="sensor">Sensor</string>
    <string name="id">Id Peternak</string>
    <string name="nama_kandang">Nama Kandang</string>
    <string name="panjang_kandang_m">Panjang Kandang (m)</string>
    <string name="lebar_kandang_m">Lebar Kandang (m)</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="rt_rw">Rt/Rw</string>
    <string name="lanjut">Lanjut</string>
    <string name="jenis_kandang">Jenis Kandang</string>
    <string name="kembali">Kembali</string>
    <string name="sensor_latitude">Sensor Latitude</string>
    <string name="sensor_longitude">Sensor Longitude</string>
    <string name="sensor_battery_percent">Sensor Battery Percent</string>
    <string name="sensor_gps_type">Sensor GPS Type</string>
    <string name="sensor_report">Sensor Report</string>
    <string name="pilih_sensor_status">Pilih Sensor Status</string>
    <string name="tipe_ternak">Tipe Ternak</string>
    <string name="ras_ternak">Ras Ternak</string>
    <string name="pakan_ternak">Pakan Ternak</string>
    <string name="limbah_ternak">Limbah Ternak</string>
    <string name="umur_ternak">Umur Ternak</string>
    <string name="pilih_kandang_ternak">Pilih Kandang Ternak</string>
    <string name="tipe_kematian">Tipe Kematian</string>
    <string name="sebab_kematian">Sebab Kematian</string>
    <string name="bulan_tahun_kematian">Bulan/Tahun Kematian</string>
    <string name="rp">Rp.</string>
    <string name="harga_penawaran">Harga Penawaran</string>
    <string name="pilih_ternak">Pilih Ternak</string>
    <string name="deal">Deal</string>
    <string name="dijual">Dijual</string>
    <string name="pilih_kandang_untuk_hewan">Pilih Kandang untuk Hewan</string>
    <string name="tidak_ada_event_saat_ini">Tidak ada Event saat ini!</string>
    <string name="tidak_ada_event_search">Tidak ada Event yang cocok dengan Search!</string>
    <string name="tidak_ada_informasi_category">Tidak ada informasi Category saat ini</string>
    <string name="tidak_ada_informasi_brebes_today_search">Tidak ada informasi Brebes Today yang cocok dengan Search!</string>
    <string name="tidak_ada_informasi_mengenai_digital_finance_saat_ini">Tidak ada informasi mengenai Digital Finance saat ini</string>
    <string name="tidak_ada_informasi_mengenai_digital_finance_search">Tidak ada informasi mengenai Digital Finance yang cocok dengan Search!</string>
    <string name="asal_kandang">Asal Kandang</string>
    <string name="total_ternak">Total Ternak</string>
    <string name="ternak_hasil_beli">Ternak Hasil Beli</string>
    <string name="ternak_dijual">Ternak Dijual</string>
    <string name="ternak_mati">Ternak Mati</string>
    <string name="daftar_ternak">Daftar Ternak</string>
    <string name="daftar_ternak_terjual">Daftar Ternak Terjual</string>
    <string name="tidak_ada_data">Tidak ada Data!</string>
    <string name="daftar_ternak_mati">Daftar Ternak Mati</string>
    <string name="bulan_tahun_terjual">Bulan/Tahun Terjual</string>
    <string name="ternak_tanpa_status">Ternak Tanpa Status</string>
</resources>