<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ui.auth.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_rounded_top_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="80dp"
            app:layout_constraintBottom_toTopOf="@id/tv_producer"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/darkGreen"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:alpha="100" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_username_layout"
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:alpha="0"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/gray"
                tools:alpha="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_password_layout"
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/gray"
                app:passwordToggleEnabled="true"
                tools:alpha="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="0"
                android:backgroundTint="@color/darkGreen"
                android:text="@string/login"
                android:textAllCaps="false"
                app:cornerRadius="18dp"
                tools:alpha="100" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="0"
                android:gravity="center"
                android:orientation="horizontal"
                tools:alpha="100">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/belum_memiliki_akun"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/register"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_producer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/producer"
            android:textColor="@color/darkGreen"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ndorokojo_logo"
        app:layout_constraintBottom_toTopOf="@id/layout_content"
        app:layout_constraintTop_toTopOf="@id/layout_content" />

</androidx.constraintlayout.widget.ConstraintLayout>